fix problem that we couldnt select within playable area by reducing its z-index

--- a/client/cards.css
+++ b/client/cards.css
@@ -24,9 +24,9 @@ body {
 
 .canDrag { cursor: -webkit-grab; }
 
-#playable-area  {background-color: #D3F8D3; position: absolute; left: 150; top: 150; width: 600px; height: 600px; border: 1px solid black;}
+#playable-area {z-index: -999; background-color: #C8B699; position: absolute; left: 150px; top: 150px; width: 600px; height: 600px; border: 1px solid black;}
 
-.selectable-container {width: 1000px; height: 1000px; border: 1px solid black;}
+.selectable-container {width: 1000px; height: 1000px; border: 1px solid black; }
 .selectable-container .ui-selecting { background-color: rgba(170,0,255,0.5); } 
 .selectable-container .ui-selected { background-color: rgba(170,0,255,0.5);  }
 
